...
  ModelRadioButtonsState createState() => ModelRadioButtonsState();
}

class ModelRadioButtonsState extends State<ModelRadioButtons> {
  // List of modellers we support.

  List<String> modellers = ['Cluster', 'Associate', 'Tree', 'Forest', 'Boost'];

  // Default selected valueas an idex into the modellers.

  int selectedValue = 2;

  void selectRadio(int value) {
...
