...
//   {
//     'title': "Dataset",
//     "icon": Icons.input,
//     "widget": const DatasetTab(),
//   },
//   {
//     'title': "Explore",
//     "icon": Icons.insights,
//     "widget": Center(
//       child: Padding(
//         padding: const EdgeInsets.all(16.0),
//         child: Image.asset("assets/images/myplot.png"),
//       ),
...
//     'title': "Console",
//     "icon": Icons.terminal,
// //    "widget": TerminalView(terminal),
//     "widget": const RConsole(),
//   },
//   {
//     'title': "Script",
//     "icon": Icons.code,
//     "widget": const ScriptTab(),
//   },
//   {
//     'title': "Debug",
//     "icon": Icons.work,
...
