...

              ''',
              pageControllerProvider: summaryPageControllerProvider,
              onPressed: () {
                rSource(context, ref, ['explore_summary']);
              },
              child: const Text('Generate Dataset Summary'),
            ),
            LabelledCheckbox(
              label: 'Include Cross Tab',
              tooltip: '''

              Enable the generation of a cross-tabulation summary. Note that
...
