...
///
/// Authors: Graham Williams
library;

import 'package:flutter_riverpod/legacy.dart';

final modelProvider = StateProvider<String>((ref) => 'Tree');

